Add session creating authorization
