# entry/app/Http/OpenApi/Responses/MissingProperties.php
@@ -1,23 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-namespace App\Http\OpenApi\Responses;
-
-use OpenApi\Attributes as OAT;
-
-#[OAT\Response(
-    response: 'missing_properties',
-    description: 'Missing properties',
-    content: new OAT\JsonContent(
-        properties: [
-            new OAT\Property(
-                property: 'message',
-                type: 'string',
-                example: 'total'
-            ),
-        ],
-        type: 'object',
-    ),
-)]
-class MissingProperties {}
